# OS

./: .gitignore  README.md
Lab1-HelloWorld/: CMakeLists.txt  build.bat  build.sh
Lab1-HelloWorld/source/: helloworld.c  helloworld.cpp
Lab2-BackgroundPM/: CMakeLists.txt  build.bat  build.sh
Lab2-BackgroundPM/source/: test.c
Lab2-BackgroundPM/source/ProcessManager/: ProcessManager.h
Lab4-LogTemperature/: CMakeLists.txt  build.bat  build.sh
Lab4-LogTemperature/source/: SerialPort.h  TemperatureDeviceSimulator.h  TemperatureLogger.h  main.c
Lab5-Client/: README.md  package-lock.json  package.json  vue.config.js
Lab5-Client/src/: App.vue
Lab5-Client/src/components/: TemperatureChart.vue  TemperatureDashboard.vue
Lab5-Server/: CMakeLists.txt  build.sh
Lab5-Server/lib/: mongoose.c  mongoose.h
Lab5-Server/source/: config.h  database.c  http_server.c  main.c
Lab5-Server/source/database/: Database.c  Database.h
Lab5-Server/source/logger/: SerialPort.c  SerialPort.h  TemperatureDeviceSimulator.c  TemperatureDeviceSimulator.h  TemperatureLogger.c  TemperatureLogger.h
Lab5-Server/source/server/: Server.c  Server.h
Lab6-ClientQt/: CMakeLists.txt  Lab6-ClientQt.pro  build.bat  build.sh  mainwindow.cpp  mainwindow.h
Lab7-ClientQtKiosk/: CMakeLists.txt  Lab7-ClientQtKiosk.pro  build.sh  demo.mkv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
